--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/270.utl-raw-oracle/18.copies-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/270.utl-raw-oracle/18.copies-oracle.md
@@ -36,7 +36,7 @@ UTL_RAW.COPIES (
 
 |   **异常**    |        **描述**      |
 |-------------|------------------------|
-| VALUE_ERROR | 可能发生下述情况： <ul><li> r 丢失、 为 `NULL` 或者长度为 0。</li>   <li> n \< 1。   <li> 结果的长度超出 RAW 的最大长度。</li></ul>    |
+| VALUE_ERROR | 可能发生下述情况： <ul><li> r 丢失、 为 `NULL` 或者长度为 0。</li>   <li> n \< 1。</li>   <li> 结果的长度超出 RAW 的最大长度。</li></ul>    |
 
 
 
