--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/270.utl-raw-oracle/7.cast-from-binary-float-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/270.utl-raw-oracle/7.cast-from-binary-float-oracle.md
@@ -20,15 +20,16 @@ RETURN RAW;
 | **参数** | **说明** |
 | --- | --- |
 | n | `BINARY_FLOAT` 值。 |
-| endianess | 表示字节顺序的 `BINARY_INTEGER` 值。该函数可以识别的定义常量如下：<ul><li> 1： `big_endian` </li> <li>  2：`little_endian` </li> <li> 3：`machine_endian` </li></ul> 默认值为  `big_endian`。`machine_endian` 的设置与在大端机上的 `big_endian` 效果相同，或者与在小端机上的 ` little_endian` 效果相同。 |
+| endianess | 表示字节顺序的 `BINARY_INTEGER` 值。该函数可以识别的定义常量如下：<ul><li> 1： `big_endian` </li> <li>  2：`little_endian` </li> <li> 3：`machine_endian` </li></ul> 默认值为  `big_endian`。`machine_endian` 的设置与在大端机上的 `big_endian` 效果相同，或者与在小端机上的 `little_endian` 效果相同。 |
 
 ## 返回值
 
-返回 `BINARY_FLOAT` 值的二进制表示形式（RAW），如果输入为 `NULL`，则返回 `NULL`。
+返回 `BINARY_FLOAT` 值的二进制表示形式（RAW）。
 
 ## 使用说明
 
 - 如下列表为一个 4 字节的 `BINARY_FLOAT` 值与 IEEE 754 单精度格式的映射关系：
+   
    ```sql
    byte 0: bit 31 ~ bit 24
    byte 1: bit 23 ~ bit 16
@@ -42,9 +43,10 @@ RETURN RAW;
    | **big_endian** | fb0 | fb1 | fb2 | fb3 |
    | **little_endian** | fb3 | fb2 | fb1 | fb0 |
 
-- 对于 `machine-endian`，`BINARY_FLOAT` 参数的 4 个字节被直接复制到 `RAW` 返回值中。如果用户在大端机上传递了 `big_endian`，或者在小端机上传递了` little_endian`，效果是一样的。
+- 对于 `machine-endian`，`BINARY_FLOAT` 参数的 4 个字节被直接复制到 `RAW` 返回值中。如果用户在大端机上传递了 `big_endian`，或者在小端机上传递了 `little_endian`，效果是一样的。
   
 ## 示例
+
 ```sql
 obclient> SELECT UTL_RAW.CAST_FROM_BINARY_FLOAT(0) FROM DUAL;
 +-----------------------------------+
