--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/270.utl-raw-oracle/6.cast-from-binary-double-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/270.utl-raw-oracle/6.cast-from-binary-double-oracle.md
@@ -21,16 +21,17 @@ RETURN RAW;
 | **参数** | **说明** |
 | --- | --- |
 | n | `BINARY_DOUBLE` 值。 |
-| endianess | 表示字节顺序的 `BINARY_INTEGER` 值。该函数可以识别的定义常量如下：<ul><li> 1： `big_endian` </li> <li>  2：`little_endian` </li> <li> 3：`machine_endian` </li></ul> 默认值为  `big_endian`。`machine_endian` 的设置与在大端机上的 `big_endian` 效果相同，或者与在小端机上的 ` little_endian` 效果相同。 |
+| endianess | 表示字节顺序的 `BINARY_INTEGER` 值。该函数可以识别的定义常量如下：<ul><li> 1： `big_endian` </li> <li>  2：`little_endian` </li> <li> 3：`machine_endian` </li></ul> 默认值为  `big_endian`。`machine_endian` 的设置与在大端机上的 `big_endian` 效果相同，或者与在小端机上的 `little_endian` 效果相同。 |
 
 
 ## 返回值
 
-返回 `BINARY_DOUBLE` 值的二进制表示形式（RAW），如果输入为 `NULL`，则返回 `NULL`。
+返回 `BINARY_DOUBLE` 值的二进制表示形式（RAW）。
 
 ## 使用说明
 
 - 如下列表为一个 8 字节的 `BINARY_DOUBLE` 值与 IEEE 754 双精度格式的映射关系：
+  
    ```sql
    byte 0: bit 63 ~ bit 56
    byte 1: bit 55 ~ bit 48
@@ -49,7 +50,7 @@ RETURN RAW;
    | **big_endian** | db0 | db1 | db2 | db3 | db4 | db5 | db6 | db7 |
    | **little_endian** | db7 | db6 | db5 | db4 | db3 | db2 | db1 | db0 |
 
-- 对于 `machine-endian`，`BINARY_DOUBLE` 参数的 8 个字节被直接复制到 `RAW` 返回值中。如果用户在大端机上传递了 `big_endian`，或者在小端机上传递了` little_endian`，效果是一样的。
+- 对于 `machine-endian`，`BINARY_DOUBLE` 参数的 8 个字节被直接复制到 `RAW` 返回值中。如果用户在大端机上传递了 `big_endian`，或者在小端机上传递了 `little_endian`，效果是一样的。
  
 ## 示例
 
