--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md
@@ -53,16 +53,10 @@
    | **RootServer 位置** | 您需选择一个 IP 作为 Root Service 所在的机器。多副本的 OceanBase 集群，其每个 Zone 都需指定一个 Root Server。        |
    | **Zone 优先级排序**  | Zone 的优先级排序。该优先级顺序影响 sys 租户的 Primary Zone 的优先级顺序。 左边的列表框中显示了当前集群的所有 Zone。<ol><li>您可以在左侧列表框中选择一个或多个 Zone 添加到右侧的列表框中，默认先选择的 Zone 的优先级高于后选择的 Zone；一次选中的多个 Zone 的优先级相同。</li><li> 移动到右侧的列表框中后，您也可以在右侧的列表框中通过拖拽调整顺序，列表框上方的 Zone 的优先级高于下方的 Zone。 </li></ol>   |
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <ul>
-    <li>如果设置了 Primary Zone，则 Primary Zone 所在的 Region 必须至少有两个 Zone，并且至少有两个全能型（F）副本（一个 Zone 一个副本）。</li>
-    </ul>
-  </main>
-
-   <!-->
-   >* 有关 Primary Zone 的详细信息，请参见 [Primary Zone](../../../../7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/)。
-   <-->
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <ul><li>如果设置了 Primary Zone，则 Primary Zone 所在的 Region 必须至少有两个 Zone，并且至少有两个全能型（F）副本（一个 Zone 一个副本）。</li></ul>
+   </main>
 
 6. （可选）在 **创建集群** 页面，参数设置。
 
@@ -80,4 +74,5 @@
 
 ## 相关文档
 
-集群部署完成后，需要创建业务租户，详细信息请参见 [创建租户](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md)。
+* [创建租户](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md)
+* [连接方式概述](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)
