--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
@@ -294,6 +294,7 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
 ## 相关文档
 
+* [通过 OBClient 连接 OceanBase 租户](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)
 * [系统配置项总览](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md)
 * [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md)
 * [创建租户](../5.create-oceanbase-tenant-command-line/2.create-tenant.md)
