410添加链接数据库路径

--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -54,7 +54,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
 3. 执行安装脚本
 
-    ```bash
+   ```bash
    [root@**** bin]#  ./install.sh
    name: grafana
    version: 7.5.17
@@ -99,7 +99,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
    If you want to view detailed obd logs, please run: obd display-trace d68a7eac-c4a1-11ed-9cb0-e68dd98f006d
 
    add auto set env logic to profile: /root/.bash_profile
-    ```
+   ```
 
 #### 安装后设置和验证
 
@@ -221,10 +221,16 @@ Trace ID: 0d6cfd06-c4a6-11ed-ac45-e68dd98f006d
 If you want to view detailed obd logs, please run: obd display-trace 0d6cfd06-c4a6-11ed-ac45-e68dd98f006d
 ```
 
+当回显信息中出现 `demo running` 时，表示部署成功。
+
+可以通过回显信息中的直连方式 `obclient -h127.0.0.1 -P2881 -uroot -Doceanbase -A` 或者通过 ODP 连接的方式 `obclient -h127.0.0.1 -P2883 -uroot -Doceanbase -A` 连接数据库。
+
 ##### 使用 OBClient 客户端连接到 OceanBase 数据库
 
+通过直连方式连接 OceanBase 数据库，示例如下：
+
 ```shell
-[root@****]# obclient -uroot@sys -h127.0.0.1 -P2881
+[root@****]# obclient -uroot@sys -h127.0.0.1 -P2881 -A
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your OceanBase connection id is 3221487644
 Server version: OceanBase 4.1.0.0 (r100000982023031415-5a1bf675f0c2756e67fd0fc5546d2f9d191c0f24) (Built Mar 14 2023 15:17:07)
