--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
@@ -10,13 +10,13 @@ OceanBase 数据库社区版支持多种部署方式：
 
 ## 快速部署
 
-* 对于非原生支持的操作系统（比如 MAC 和 Window），建议使用 docker 镜像的方式进行部署；具体操作参见 [快速体验 OceanBase](../../2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md)。
+* 对于非原生支持的操作系统（比如 MAC 和 Window），建议使用 docker 镜像的方式进行部署；具体操作参见 [体验 OceanBase 数据库](../../2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md) 中 **方案三：部署 OceanBase 容器环境** 一节。
 
-* 对于原生支持的操作系统（Linux 系列，具体见支持的操作系统列表），建议使用 OBD 进行一键部署；具体操作参见 [使用 obd demo 部署 OceanBase 数据库](../../2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md)。
+* 对于原生支持的操作系统（Linux 系列，具体见支持的操作系统列表），建议使用 OBD 进行部署；具体操作参见 [体验 OceanBase 数据库](../../2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md) 中 **方案一** 和 **方案二**。
 
 ## 标准部署
 
-* 对于线下环境，建议使用 OBD 进行标准部署；具体操作参见 [部署 OceanBase 数据库生产环境](2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md)
+* 对于线下环境，建议使用 OBD 进行标准部署；具体操作参见 [使用命令行部署 OceanBase 数据库生产环境](2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md)
 
 * 对于 kubernetes 环境，建议使用 ob-operator 的方式部署；具体操作参见 [在 Kubernetes 集群中部署 OceanBase 数据库](../5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md)
 
