--- a/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
@@ -1,8 +1,8 @@
 # 部署 NFS
 
-在执行备份操作前，如果需要使用 NFS 软件作为备份目的地，可参考本节内容部署 NFS。
+在执行备份操作前，如果需要使用 NFS 作为备份目的地，可参考本节内容部署 NFS。
 
-一般建议使用 OSS 或者专用的 NFS 硬件设备，可以考虑使用阿里云的 NFS 硬件设备。
+NFS 分软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬件设备，可以考虑使用阿里云的 NFS 硬件设备。
 
 ## 注意事项
 
@@ -10,13 +10,18 @@
 
 * 由于 OceanBase 数据库备份的并发控制需依赖 NFS4 的文件锁功能，故在挂载 NFS 时，需使用 NFS 4.1 及以上版本。
 
-* 在使用 NFS 作为备份介质时，必须保证所有 OBServer 节点都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见本节 **部署 NFS 客户端**。
+* 在使用 NFS 作为备份介质时，必须保证所有 OBServer 节点都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见本节 **部署 NFS 的客户端**。
 
 * 在重启 OBServer 节点时，需要先启动 NFS，再启动 OBServer 节点。
 
 * 添加新的机器后，在启动 OBServer 节点前，需要保证新的机器挂载 NFS 成功或者可以备份到其他介质。
 
-## 部署 NFS 服务器端
+## 部署 NFS 软件的服务器端
+
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>如果您使用的是 NFS 硬件设备，则可跳过本操作，直接部署 NFS 客户端。</p>
+</main>
 
 1. 登录 NFS 服务器。
 
@@ -85,9 +90,9 @@
 
    3. （可选）重启机器。
 
-## 部署 NFS 客户端
+## 部署 NFS 的客户端
 
-部署 NFS 客户端时，需要在所有 OBServer 节点上进行操作。
+部署 NFS 的客户端时，需要在所有 OBServer 节点上进行操作。
 
 以下以在某一台 OBServer 节点上的操作为例，提供操作指导。
 
