--- a/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
@@ -10,7 +10,7 @@ NFS 分软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬件
 
 * 由于 OceanBase 数据库备份的并发控制需依赖 NFS4 的文件锁功能，故在挂载 NFS 时，需使用 NFS 4.1 及以上版本。
 
-* 在使用 NFS 作为备份介质时，必须保证所有 OBServer 节点都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见本节 **部署 NFS 的客户端**。
+* 在使用 NFS 作为备份介质时，必须保证所有 OBServer 节点都挂载了同一个服务器的 NFS。同时，为保证备份的顺利进行，务必使用本文档中建议的参数挂载 NFS。挂载 NFS 具体操作请参见本节 **部署 NFS 客户端**。
 
 * 在重启 OBServer 节点时，需要先启动 NFS，再启动 OBServer 节点。
 
@@ -90,7 +90,7 @@ NFS 分软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬件
 
    3. （可选）重启机器。
 
-## 部署 NFS 的客户端
+## 部署 NFS 客户端
 
 部署 NFS 的客户端时，需要在所有 OBServer 节点上进行操作。
 
