--- a/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
@@ -92,7 +92,7 @@ NFS 分软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬件
 
 ## 部署 NFS 客户端
 
-部署 NFS 的客户端时，需要在所有 OBServer 节点上进行操作。
+部署 NFS 客户端时，需要在所有 OBServer 节点上进行操作。
 
 以下以在某一台 OBServer 节点上的操作为例，提供操作指导。
 
