--- a/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
@@ -1,8 +1,8 @@
 # 部署 NFS
 
-在执行备份操作前，如果需要使用 NFS 软件作为备份目的地，可参考本节内容部署 NFS。
+在执行备份操作前，如果需要使用 NFS 作为备份目的地，可参考本节内容部署 NFS。
 
-一般建议使用 OSS 或者专用的 NFS 硬件设备，可以考虑使用阿里云的 NFS 硬件设备。
+NFS 分为软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬件设备，可以考虑使用阿里云的 NFS 硬件设备。
 
 ## 注意事项
 
@@ -17,6 +17,11 @@
 * 添加新的机器后，在启动 OBServer 节点前，需要保证新的机器挂载 NFS 成功或者可以备份到其他介质。
 
 ## 部署 NFS 服务器端
+
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>如果您使用的是 NFS 硬件设备，则可跳过本操作，直接部署 NFS 客户端。</p>
+</main>
 
 1. 登录 NFS 服务器。
 
