--- a/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
@@ -16,7 +16,7 @@ NFS 分为软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬
 
 * 添加新的机器后，在启动 OBServer 节点前，需要保证新的机器挂载 NFS 成功或者可以备份到其他介质。
 
-## 部署 NFS 服务器端
+## 部署 NFS 软件的服务器端
 
 <main id="notice" type='notice'>
 <h4>注意</h4>
