--- a/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.deploy-nfs.md
@@ -2,7 +2,7 @@
 
 在执行备份操作前，如果需要使用 NFS 作为备份目的地，可参考本节内容部署 NFS。
 
-NFS 分软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬件设备，可以考虑使用阿里云的 NFS 硬件设备。
+NFS 分为软件和硬件两种，一般建议使用 OSS 或者专用的 NFS 硬件设备，可以考虑使用阿里云的 NFS 硬件设备。
 
 ## 注意事项
 
