--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
@@ -1676,7 +1676,7 @@
 
 * 兼容 MySQL 错误码：1629
 
-## ERROR 1642 (HY000) : Unhandled user-defined warning condition
+## ERROR 1642 (01000) : Unhandled user-defined warning condition
 
 * OceanBase 错误码：9701
 
