410升级文档说明优化

--- a/zh-CN/7.reference/2.administrator-guide/7.management/0.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/0.upgrade-guide/2.use-the-command-line-to-upgrade-the-database/2.start-upgrade.md
@@ -237,7 +237,7 @@ Maybe you want to run cmd like that:
 
         <main id="notice" type='explain'>
         <h4>说明</h4>
-        <p>再次启动 observer 进程时就不需要指定那么参数。因为参数已经写到参数文件里。</p>
+        <p>再次启动 observer 进程时不需要指定启动参数，因为之前的启动参数已经写到参数文件里了。</p>
         </main>
 
 4. 执行 Zone 级别健康检查。
