--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -2,101 +2,73 @@
 
 本文介绍如何通过 ob-operator 在 Kubernetes 集群中部署 OceanBase 数据库。
 
-ob-operator 与其他 operator 一样，旨在让 OceanBase 以容器的方式，无缝运行在 Kubernetes 集群上。ob-operator 现已支持 OceanBase 集群的创建、删除，完整的节点生命周期管理、ob-proxy 管理，后续会支持租户管理、多 Kubernetes 集群等功能。
-
-您可按照以下步骤通过 ob-operator 来部署 OceanBase 数据库。
-
-## 部署 CRD
-
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
-```
+ob-operator 是一个 K8s operator, 可以简化 OceanBase 在 K8s 中的部署和运维。
 
 ## 部署 ob-operator
 
-### 使用默认配置部署 ob-operator
+ob-operator 可以通过两种方式进行部署
 
-```bash
+### 使用 Helm 部署 ob-operator
+
+```
+helm repo add ob-operator https://oceanbase.github.io/ob-operator/
+helm install ob-operator ob-operator/ob-operator --namespace=oceanbase-system --create-namespace  --version=1.1.0
+```
+
+### 使用配置文件部署 ob-operator
+
+```
+# deploy CRD
+kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
+
+# deploy ob-operator
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/operator.yaml
 ```
 
-### 自定义部署 ob-operator
-
-您也可以根据您的配置修改 `operator.yaml`。
-例如在 operator.yaml 中添加启动参数 `--cluster-name`，含义为 ob-operator 只处理 `cluster` 值与自身启动参数 `--cluster-name` 的值相同的 CRD。
-
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p><code>--cluster-name</code> 的值需要与 obcluster 配置中的 <code>cluster</code> 配置一致。</p>
-  </main>
-
-参考以下部分配置文件进行修改：
-
-```yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  labels:
-    control-plane: controller-manager
-  name: ob-operator-controller-manager
-  namespace: oceanbase-system
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      control-plane: controller-manager
-  template:
-    metadata:
-      labels:
-        control-plane: controller-manager
-    spec:
-      containers:
-      - args:
-        - --health-probe-bind-address=:8081
-        - --metrics-bind-address=127.0.0.1:8080
-        - --leader-elect
-        - --cluster-name=cn
-        command:
-        - /manager
-        image: ob-operator:latest
-        imagePullPolicy: Always
-        name: manager
+### ob-operator 自定义
+如果您需要对 ob-operator 进行自定义修改，可以通过下载配置文件，修改后执行如下命令进行部署
+```
+kubectl apply -f crd.yaml
+kubectl apply -f operator.yaml
 ```
 
-## 配置 Kubernetes 节点 label
+## 部署 OceanBase
 
-您需将 Kubernetes 节点配置 label，label 需要与 obcluster.yaml 中的 `nodeSelector` 配置相匹配。ob-operator 会将 Pod 调度到具有相应 label 的节点上。
-推荐配置 label 的 key 为 `topology.kubernetes.io/zone`。不同 Zone 推荐配置不同的 label 以做容灾。
+### 部署前准备
+
+#### 配置 Kubernetes 节点 label
+
+ob-operator 会根据配置文件中的 `nodeSelector` 来决定 observer 节点的分布，因此需要首先对 K8s 的 node 节点配置 label, K8s 中一般会有可用区的 label `topology.kubernetes.io/zone`, 可以直接使用这个 label, 或者单独为 OceanBase 设置 node 节点的 label。
+
+您可以通过如下命令来设置 node 的 label
 
 ```bash
-kubectl label node nodename topology.kubernetes.io/zone=zonename
-kubectl label node ${node_name} topology.kubernetes.io/zone=${zone_name}
+kubectl label node ${node_name} ${label_key}=${label_value}
+
+# for example
+kubectl label node node1 ob.zone=zone1
 ```
 
-## 部署 local-path-provisioner
+#### 部署 local-path-provisioner
 
-ob-operator 默认配置中使用了 local-path-provisioner，需要提前准备好
+ob-operator 在部署 OceanBase 时需要创建 `PVC` 作为 OceanBase 的存储，出于性能考虑，推荐使用本地存储, 本文中使用 local-path-provisioner 来管理 PVC。
 
 部署命令:
-
-```text
-kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.22/deploy/local-path-storage.yaml
+``` bash
+kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.24/deploy/local-path-storage.yaml
 ```
 
-更多信息可以参考 <https://github.com/rancher/local-path-provisioner>
+更多信息请参考 <https://github.com/rancher/local-path-provisioner>
 
-## 部署 OceanBase 集群
+### 部署 OceanBase 集群
 
-### 使用默认配置部署 OceanBase 集群
-
+OceanBase 集群通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改。
+您可通过如下命令下载 obcluster 的配置文件。
 ```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
 ```
 
-### 自定义部署 OceanBase 集群
-
-您也可以在 obcluster.yaml 中根据自己的配置做一些修改。
-参考以下部分配置文件进行修改：
+配置文件内容示例如下
 
 ```yaml
 apiVersion: cloud.oceanbase.com/v1
@@ -106,7 +78,8 @@ metadata:
   namespace: obcluster
 spec:
   imageRepo: oceanbasedev/oceanbase-cn
-  tag: 4.0.0-snapshot-20230130110559
+  tag: v4.1.0.0-100000192023032010
+  imageObagent: oceanbase/obagent:1.2.0
   clusterID: 1
   topology:
     - cluster: cn
@@ -114,21 +87,21 @@ spec:
       - name: zone1
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone1
+          ob.zone: zone1
         replicas: 1
       - name: zone2
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone2
+          ob.zone: zone2
         replicas: 1
       - name: zone3
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone3
+          ob.zone: zone3
         replicas: 1
       parameters:
-        - name: freeze_trigger_percentage
-          value: "30"
+        - name: log_disk_size
+          value: "40G"
   resources:
     cpu: 2
     memory: 10Gi
@@ -142,42 +115,44 @@ spec:
       - name: log
         storageClassName: "local-path"
         size: 30Gi
+      - name: obagent-conf-file
+        storageClassName: "local-path"
+        size: 1Gi
+    volume:
+        name: backup
+        nfs:
+          server: ${nfs_server_address}
+          path: /opt/nfs
+          readOnly: false
 ```
 
 主要配置介绍：
 
 - `imageRepo`：OceanBase 镜像 repo。
 - `tag`：OceanBase 镜像 tag。
-  
-- `cluster`：按需配置，如果需要在该 Kubernetes 集群中部署 OceanBase 集群，请将 cluster 配置为与 ob-operator 启动参数 `--cluster-name` 相同。
-- `parameters`：按需配置, 自定义的一些 OceanBase 配置项。
-  
-- `cpu`：建议配置为大于 2 的整数，小于 2 会引发系统异常。
-  
-- `memory`：建议配置为大于 10 Gi 的整数，小于 10 Gi 会引发系统异常。
-  
-- `data-file`：该部分为 OBServer 系统配置项 `datafile_size` 的大小，建议为 memory 的 3 倍以上。用户可以自行按需配置 `storageClassName`。
-  
-- `data-log`：该部分为 OBServer 系统配置项 `data_dir` 的大小，建议为 memory 的 5 倍以上。用户可以自行按需配置 `storageClassName`。
-  
-- `log`：该部分为 OBServer 系统日志的大小，建议为 30 Gi 以上。用户可以自行按需配置 `storageClassName`。
+- `imageObagent`: OBAgent 的镜像，用来做 OceanBase 的监控数据采集。
+- `cluster`：按需配置，如果需要在该 Kubernetes 集群中部署 OceanBase 集群，请将 cluster 配置为与 ob-operator 启动参数 `--cluster-name` 相同 (默认值为cn) 。
+- `nodeSelector`: 当前 zone 的 node 选择策略，按照 node 的 label 进行匹配。
+- `parameters`：按需配置, 自定义的 OceanBase 配置项。
+- `cpu`：Pod 的 CPU 资源，建议配置值 > 2。
+- `memory`：Pod 的 Memory 资源, 建议配置为大于 10 Gi 的整数，小于 10 Gi 会引发系统异常。
+- `data-file`：OceanBase 数据存储配置，可以指定大小和 `storageClass`, 用作 OceanBase 的数据目录， 建议为大小至少配置为 memory 大小的 3 倍以上。
+- `data-log`：OceanBase 日志存储配置, 可以指定大小和 `storageClass`, 用作 OceanBase 的 Clog 目录， 建议大小至少配置为 memory 大小的 5 倍以上。
+- `log`：OceanBase 进程日志存储配置，可以指定大小和 `storageClass`, 用作 OceanBase 进程日志的存放目录, 建议大小至少配置 30Gi 以上。
+- `obagent-conf-file`：OBAgent 配置文件目录存储配置, 用来存放 OBAgent 配置文件, 不需要配置特别打，一般配置 1Gi 就可以。
+- `volume`: 用作备份数据的存储，无备份需求可以不配置，但是集群创建好之后无法再另外添加，需要提前做好规划。
 
-## 部署 OBProxy
 
-### 使用默认配置部署 OBProxy
-
+### 部署 OBProxy
+OBProxy 通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改。
+您可通过如下命令下载 obcluster 的配置文件。
 ```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
 ```
-
-### 自定义部署 OBProxy
-
-您也可以在 obproxy.yaml 中根据自己的配置做一些修改。
 参考以下部分配置文件进行修改：
-
 ```yaml
-# deployment
+# deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -187,7 +162,7 @@ spec:
   selector:
     matchLabels:
       app: obproxy
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
@@ -195,7 +170,7 @@ spec:
     spec:
       containers:
         - name: obproxy
-          image: oceanbase/obproxy-ce:3.2.3
+          image: oceanbasedev/obproxy-ce:4.1.0.0-7
           ports:
             - containerPort: 2883
               name: "sql"
@@ -212,8 +187,9 @@ spec:
             limits:
               memory: 2Gi
               cpu: "1"
----
-# service
+```
+```yaml
+# service.yaml
 apiVersion: v1
 kind: Service
 metadata:
@@ -224,37 +200,63 @@ spec:
   selector:
     app: obproxy
   ports:
-    - name: "tcp"
+    - name: "sql"
       port: 2883
       targetPort: 2883
       nodePort: 30083
+    - name: "prometheus"
+      port: 2884
+      targetPort: 2884
+      nodePort: 30084
 ```
 
 主要环境变量配置说明：
 
 - `APP_NAME`: OBProxy 的 appname。
 - `OB_CLUSTER`: OBProxy 连接的 OceanBase 集群名。
+- `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT` 来配置，环境变量的名字和 OceanBase 的集群名有关, 其中 `OB_TEST` 部分是 OceanBase 集群名, 需要转换成大写和下划线。
 
-- `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过 OceanBase 集群的 service 地址来生成的，当部署好 OceanBase 集群之后，会自动产生两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT`, 分别表示 OceanBase 集群的服务地址和端口。
-
-## 部署 prometheus
-
-### 使用默认配置部署 prometheus
-
+### 连接 OceanBase 集群
+推荐使用 OBProxy 来连接 OceanBase，在部署好了 OceanBase 和 OBProxy 之后，您可通过一下命令来获取 OBProxy 的 service 连接地址。
 ```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role-binding.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/configmap.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/service.yaml
+kubectl get svc ${servicename} -n ${namespace}
+
+# for example
+kubectl get svc obproxy-service -n obcluster
+
+# output
+NAME              TYPE       CLUSTER-IP      EXTERNAL-IP   PORT(S)                         AGE
+obproxy-service   NodePort   1.1.1.1   <none>        2883:30083/TCP,2884:30084/TCP   1m
 ```
 
-### 自定义部署 prometheus
+可以通过 CLUSTER-IP 和 PORT 的方式进行连接，对应的连接命令为
+```bash
+# without password
+mysql -h1.1.1.1 -P2883 -uroot oceanbase -A -c
 
-prometheus 查询 obagent 的请求地址通过 configmap 来进行配置，根据服务名，端口名来进行过滤, 如果 oceanbase 集群或者 obproxy 集群进行过自定义的配置，需要根据实际情况设置服务名的正则表达式。
+# with password
+mysql -h1.1.1.1 -P2883 -uroot -p oceanbase -A -c
+```
+
+
+## 监控 OceanBase
+
+### 部署 prometheus
+
+#### 部署方式
+您可根据 ob-operator 中的 prometheus 配置文件作为参考，可以通过如下命令下载配置文件
+```bash
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role-binding.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/configmap.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/service.yaml
+```
+
+prometheus 根据 K8s 中服务的名称和端口来选择收集数据的地址，可以按照正则表达式进行过滤, 可以在 config.yaml 中进行配置
 
 ```yaml
-# configmap 中关键配置
+# configmap.yaml中部分配置
 scrape_configs:
   - job_name: 'obagent-monitor-basic'
     kubernetes_sd_configs:
@@ -290,40 +292,35 @@ scrape_configs:
       action: keep
 ```
 
-利用 k8s 的服务发现能力，配置服务名称和端口名，可以自动找到所有的 endpoint 节点, 根据对应的请求路径，可以查询到对应的监控数据。
-
-配置说明：
+#### 配置说明：
 
 - service 和 port 说明:
 
-  - oceanbase: ob-operator 会根据部署的 oceanbase 集群名称来创建一个 service， 命名的规则是 `svc-monitor-${obcluster_name}`, 端口名为 `monagent`, 如果部署 oceanbase 的时候自定义了集群名，需要根据实际的集群名称来修改对应配置
-  - obproxy: 需要配置对应的 obproxy 的 service 和 port name
+  - OceanBase: ob-operator 会根据部署的 OceanBase 集群名称来创建一个 service， 命名的规则是 `svc-monitor-${obcluster_name}`, 端口名为 `monagent`, 如果部署 OceanBase 的时候自定义了集群名，需要根据实际的集群名称来修改对应配置
+  - OBProxy: 需要配置对应的 OBProxy 的 service 和 port name
 
 - 监控指标的请求路径:
 
-  - oceanbase 监控指标： 请求路径分别为 `/metrics/ob/basic`, `/metrics/ob/extra`
-  
-  - obproxy 监控指标: obproxy 自身支持了 prometheus 协议暴露监控指标的能力，请求路径为 `/metrics`
-  
-### 验证
+  - OceanBase 监控指标： 请求路径分别为 `/metrics/ob/basic`, `/metrics/ob/extra`
+  - OBProxy 监控指标: OBProxy 自身支持了 prometheus 协议暴露监控指标的能力，请求路径为 `/metrics`
+
+#### 验证
 
 浏览器打开 prometheus 的地址，查看 Status -> Targets, 验证 `proxy-monitor`, `obagent-monitor-host`, `obagent-monitor-basic`, `obagent-monitor-extra` 下的 Endpoint 都是 up 状态
 点击 Graph, 可以输入 `PromQL` 表达式进行查询
 
-## 部署 grafana
+### 部署 grafana
 
-### 使用默认配置部署 grafana
-
+#### 部署方式
+您可根据 ob-operator 中的 prometheus 配置文件作为参考，可以通过如下命令下载配置文件
 ```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/configmap.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/pvc.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/service.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/configmap.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/pvc.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/service.yaml
 ```
 
-### 自定义部署 grafana
-
-grafana 通过 configmap 设置关键配置信息，包括 prometheus 数据源的地址, 如果 prometheus 进行了自定义部署，需要配置实际的 service 地址
+grafana 通过 configmap 设置配置信息
 
 ```yaml
 # configmap 中关键配置
@@ -353,9 +350,9 @@ data:
 
 配置说明：
 
-- `url`：grafana 的配置中会使用到 prometheus 的服务地址作为数据源的配置(datasource 中的 url 字段)，需要根据 prometheus 的实际部署情况来填写
+- `url`：grafana 的配置中会使用到 prometheus 的服务地址作为数据源的配置(datasource 中的 url 字段), 配置的格式为 "http://${service_name}.${namespace}.svc:${service_port}"
 
-### 验证
+#### 验证
 
 浏览器打开 grafana 的地址，通过 `admin` 用户登陆，默认密码也是 `admin`, 第一次会提示修改密码
 有三个配置好的 dashboard 可以直接导入
