optimize some command

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -27,7 +27,12 @@ kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/
 
 ### ob-operator 自定义
 如果您需要对 ob-operator 进行自定义修改，可以通过下载配置文件，修改后执行如下命令进行部署
-```
+```bash
+# download the config file
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/operator.yaml
+
+# after making some modification
 kubectl apply -f crd.yaml
 kubectl apply -f operator.yaml
 ```
@@ -51,7 +56,7 @@ kubectl label node node1 ob.zone=zone1
 
 #### 部署 local-path-provisioner
 
-ob-operator 在部署 OceanBase 时需要创建 `PVC` 作为 OceanBase 的存储，出于性能考虑，推荐使用本地存储, 本文中使用 local-path-provisioner 来管理 PVC。
+ob-operator 在部署 OceanBase 时需要创建 PVC 作为 OceanBase 的存储，出于性能考虑，推荐使用本地存储, 本文中使用 local-path-provisioner 来管理 PVC。
 
 部署命令:
 ``` bash
@@ -142,15 +147,20 @@ spec:
 - `obagent-conf-file`：OBAgent 配置文件目录存储配置, 用来存放 OBAgent 配置文件, 不需要配置特别打，一般配置 1Gi 就可以。
 - `volume`: 用作备份数据的存储，无备份需求可以不配置，但是集群创建好之后无法再另外添加，需要提前做好规划。
 
+配置文件修改之后可以通过以下命令进行部署:
+```
+kubectl apply -f obcluster.yaml
+```
+
 
 ### 部署 OBProxy
 OBProxy 通过 yaml 配置文件进行定义，您可参考 ob-operator 提供的配置文件进行自定义的修改。
-您可通过如下命令下载 obcluster 的配置文件。
+您可通过如下命令下载 OBProxy 的配置文件。
 ```bash
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
 wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
 ```
-参考以下部分配置文件进行修改：
+参考以下配置文件进行修改：
 ```yaml
 # deployment.yaml
 apiVersion: apps/v1
@@ -215,9 +225,16 @@ spec:
 - `APP_NAME`: OBProxy 的 appname。
 - `OB_CLUSTER`: OBProxy 连接的 OceanBase 集群名。
 - `RS_LIST`: OceanBase 集群的 rs_list, 这里是通过两个环境变量 `SVC_OB_TEST_SERVICE_HOST`, `SVC_OB_TEST_SERVICE_PORT` 来配置，环境变量的名字和 OceanBase 的集群名有关, 其中 `OB_TEST` 部分是 OceanBase 集群名, 需要转换成大写和下划线。
+- `service`: service 配置中会开放两个端口，一个用来作 sql 连接的端口，一个是监控数据的采集端口。
+
+配置文件修改之后可以通过以下命令进行部署:
+```
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
+```
 
 ### 连接 OceanBase 集群
-推荐使用 OBProxy 来连接 OceanBase，在部署好了 OceanBase 和 OBProxy 之后，您可通过一下命令来获取 OBProxy 的 service 连接地址。
+推荐通过 OBProxy 来连接 OceanBase，在部署好了 OceanBase 和 OBProxy 之后，您可通过以下命令来获取 OBProxy 的 service 连接地址。
 ```bash
 kubectl get svc ${servicename} -n ${namespace}
 
@@ -304,6 +321,15 @@ scrape_configs:
   - OceanBase 监控指标： 请求路径分别为 `/metrics/ob/basic`, `/metrics/ob/extra`
   - OBProxy 监控指标: OBProxy 自身支持了 prometheus 协议暴露监控指标的能力，请求路径为 `/metrics`
 
+配置文件修改之后可以通过以下命令进行部署:
+```
+kubectl apply -f cluster-role.yaml
+kubectl apply -f cluster-role-binding.yaml
+kubectl apply -f configmap.yaml
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
+```
+
 #### 验证
 
 浏览器打开 prometheus 的地址，查看 Status -> Targets, 验证 `proxy-monitor`, `obagent-monitor-host`, `obagent-monitor-basic`, `obagent-monitor-extra` 下的 Endpoint 都是 up 状态
@@ -351,6 +377,14 @@ data:
 配置说明：
 
 - `url`：grafana 的配置中会使用到 prometheus 的服务地址作为数据源的配置(datasource 中的 url 字段), 配置的格式为 "http://${service_name}.${namespace}.svc:${service_port}"
+
+配置文件修改之后可以通过以下命令进行部署:
+```
+kubectl apply -f configmap.yaml
+kubectl apply -f pvc.yaml
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
+```
 
 #### 验证
 
