--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -389,12 +389,14 @@ kubectl apply -f service.yaml
 #### 验证
 
 浏览器打开 grafana 的地址，通过 `admin` 用户登陆，默认密码也是 `admin`, 第一次会提示修改密码
-有三个配置好的 dashboard 可以直接导入
+grafana 的配置中默认携带了 OceanBase 的 dashboard，可以在浏览器中打开以下链接查看
+```text
+http://${node_ip}:${node_port}/d/oceanbase
+```
 
-- oceanbase: 15215
+主机指标和 obproxy 的监控模版可以通过添加如下 id 对应的 dashboard 进行查看
 - 主机: 15216
 - obproxy: 15354
-导入之后，可以查看对应的监控图表
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
