--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/2.perform-switchover.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/7.role-switch/2.perform-switchover.md
@@ -23,13 +23,13 @@ Switchover 的执行流程如下图所示。
    * 备租户所在集群的 `sys` 租户为备租户配置归档目的端
 
      ```sql
-     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION = archive_path [PIECE_SWITCH_INTERVAL = piece_switch_interval] [BINDING = archive_mode]' TENANT = tenant_name;
+     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=archive_path [PIECE_SWITCH_INTERVAL=piece_switch_interval] [BINDING=archive_mode]' TENANT = tenant_name;
      ```
 
    * 备租户配置本租户的归档目的端
 
      ```sql
-     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION = archive_path [PIECE_SWITCH_INTERVAL = piece_switch_interval] [BINDING = archive_mode]';
+     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=archive_path [PIECE_SWITCH_INTERVAL=piece_switch_interval] [BINDING=archive_mode]';
      ```
 
    相关参数说明如下：
@@ -47,9 +47,9 @@ Switchover 的执行流程如下图所示。
    归档介质为 NFS 时，配置备租户的归档路径为 `file:///data/1/nfs/backup//ob_oracle_standby/archive` 且归档模式为 `Optional` 的示例如下：
 
    ```shell
-   obclient [ORACLE]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION = file:///data/1/nfs/backup//ob_oracle_standby/archive BINDING = optional' TENANT = oracle_standby;
+   obclient [ORACLE]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/1/nfs/backup//ob_oracle_standby/archive BINDING=optional' TENANT = oracle_standby;
 
-   obclient [ORACLE]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION = file:///data/1/nfs/backup//ob_oracle_standby/archive BINDING = optional';
+   obclient [ORACLE]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/1/nfs/backup//ob_oracle_standby/archive BINDING=optional';
    ```
 
 3. 备租户开启归档模式。
@@ -203,13 +203,13 @@ Switchover 步骤主要完成主切备和备切主的操作。
       * 新备租户所在集群的 `sys` 租户配置新备租户的恢复源
 
         ```sql
-        ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION = archive_path' TENANT = tenant_name;
+        ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION=archive_path' TENANT = tenant_name;
         ```
 
       * 新备租户配置本租户的恢复源
 
         ```sql
-        ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION = archive_path';
+        ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION=archive_path';
         ```
 
       其中，`LOCATION` 属性用于指定新主租户的归档目的端。
@@ -217,9 +217,9 @@ Switchover 步骤主要完成主切备和备切主的操作。
       示例如下：
 
       ```shell
-      obclient [SYS]> ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION = file:///data/1/nfs/backup//ob_oracle_standby/archive' TENANT = oracle;
+      obclient [SYS]> ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION=file:///data/1/nfs/backup//ob_oracle_standby/archive' TENANT = oracle;
 
-      obclient [SYS]> ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION = file:///data/1/nfs/backup//ob_oracle_standby/archive';
+      obclient [SYS]> ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION=file:///data/1/nfs/backup//ob_oracle_standby/archive';
       ```
 
    设置恢复源后，由于原主租户的恢复位点默认为无穷大，故不需要再单独通过 `RECOVER` 命令设置原主租户的恢复终点。
