410安全违规信息修改

--- a/en-US/4.deploy-the-oceanbase-database/6.command-line-deployment/2.deploy-ocp-4/2.generate-a-configuration-file.md
+++ b/en-US/4.deploy-the-oceanbase-database/6.command-line-deployment/2.deploy-ocp-4/2.generate-a-configuration-file.md
@@ -47,7 +47,7 @@ Example:
 export SSH_AUTH = password
 export SSH_USER = root
 export SSH_PORT = 22
-export SSH_PASSWORD = 'abc123'
+export SSH_PASSWORD = '******'
 export SSH_KEY_FILE = /root/.ssh/id_rsa
 ```
 
