--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
@@ -82,7 +82,8 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 使用 `root` 用户登录集群的 `tenant1` 租户，并创建一张测试表。
 
 ```sql
-obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@tenant1#ob_test -p******
+
 obclient [(none)]> SHOW DATABASES;
 +--------------------+
 | Database           |
@@ -111,7 +112,7 @@ obclient [test]> SHOW TABLES;
 使用 `root` 用户登录集群的 `tenant2` 租户，查看 `test` 库情况。
 
 ```sql
-obclient -h***.**.***.106 -P2883 -uroot@tenant2#ob_test -p
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@tenant2#ob_test -p******
 
 obclient [(none)]> SHOW DATABASES;
 +--------------------+
