--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/6.dbcp-connection-pool-example-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/6.dbcp-connection-pool-example-of-mysql-mode.md
@@ -46,7 +46,7 @@ url=jdbc:oceanbase://10.xx.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=tr
 #用户名
 username=axxxx@oracle
 #密码
-password=xxxx
+password=******
 #初试连接数
 initialSize=30
 #最大活跃数
