--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/2.use-datax-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/2.use-datax-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -183,8 +183,8 @@ myjob.json 配置文件如下：
                 "reader": {
                     "name": "oceanbasev10reader",
                     "parameter": {
-                        "username": "xxxxxx",
-                        "password": "xxxxxx",
+                        "username": "******",
+                        "password": "******",
                         "column": ["*"],
                         "connection": [
                             {
@@ -206,8 +206,8 @@ myjob.json 配置文件如下：
                                 "table": ["t1"]
                             }
                         ],
-                        "username": "xxxxxx",
-                        "password":"xxxxx",
+                        "username": "******",
+                        "password":"******",
                         "writerThreadCount":10,
                         "batchSize": 1000,
                         "memstoreThreshold": "0.9"
