--- a/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
@@ -184,9 +184,9 @@ int main(int argc, char** argv)
 {
   mysql_library_init(0, NULL, NULL);
   MYSQL *mysql = mysql_init(NULL);
-  char* host_name = "172.xx.xx.xx";//set your mysql host
-  char* user_name = "r***"; //set your user_name
-  char* password = "***1**"; //set your password
+  char* host_name = "xxx.xxx.xxx.xxx";//set your mysql host
+  char* user_name = "******"; //set your user_name
+  char* password = "******"; //set your password
   char* db_name = "test"; //set your databasename
   int port_num = 2883; //set your mysql port
   char* socket_name = NULL;
@@ -281,7 +281,7 @@ int main(int argc, char** argv)
 
 * **user_name**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
 
-* **password**：取自 `-p` 参数，用户密码 。
+* **password**：取自 `-p` 参数，用户密码。
 
 * **db_name**：取自 `-D` 参数，需要访问的数据库名称。
 
