--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -67,13 +67,13 @@ ob_cluster -> oblogreader -> oblogmsg -> canal_server -> canal_client -> mysql
     vi instance.properties
 
     # OceanBase集群参数
-    canal.instance.oceanbase.rsList=xxx.xxx.xxx.xxx:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
+    canal.instance.oceanbase.rsList=10.10.10.1:2882:2881;10.10.10.2:2882:2881;10.10.10.3:2882:2881
     canal.instance.oceanbase.username=root@mysql001#test4000
-    canal.instance.oceanbase.password=1****6
+    canal.instance.oceanbase.password=******
     canal.instance.oceanbase.startTimestamp=0
 
     # oceanbase logproxy参数
-    canal.instance.oceanbase.logproxy.address=xxx.xxx.xxx.xxx:2983
+    canal.instance.oceanbase.logproxy.address=10.10.10.1:2983
     canal.instance.oceanbase.logproxy.sslEnabled=false
     canal.instance.oceanbase.logproxy.serverCert=../conf/${canal.instance.destination:}/ca.crt
     canal.instance.oceanbase.logproxy.clientCert=../conf/${canal.instance.destination:}/client.crt
@@ -125,9 +125,9 @@ ob_cluster -> oblogreader -> oblogmsg -> canal_server -> canal_client -> mysql
           key: mysql1
           properties:
             jdbc.driverClassName: com.mysql.jdbc.Driver
-            jdbc.url: jdbc:mysql://xxx.xxx.xxx.xxx:3306/test_data?useUnicode=false
+            jdbc.url: jdbc:mysql://10.10.10.1:3306/test_data?useUnicode=false
             jdbc.username: root
-            jdbc.password: 1****6
+            jdbc.password: ******
     ```
 
 4. 修改适配器库/表映射（以库映射为例）。
