add (opt_position_column:FIRST | BEFORE | AFTER column_name) for  alter table

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.alter-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.alter-table-of-mysql-mode.md
@@ -15,7 +15,7 @@ alter_table_action_list:
 
 alter_table_action: 
       ADD [COLUMN] column_definition  
-          [FIRST | BEFORE | AFTER column_name]
+          [ opt_position_column ]
     | ADD [COLUMN] (column_definition_list)
     | ADD [CONSTRAINT [constraint_name]] UNIQUE {INDEX | KEY} 
           [index_name] index_desc
@@ -54,6 +54,10 @@ column_definition:
     column_name data_type
     [DEFAULT const_value] [AUTO_INCREMENT]
     [NULL | NOT NULL] [[PRIMARY] KEY] [UNIQUE [KEY]] comment
+    [ opt_position_column ]
+
+opt_position_column:
+    FIRST | BEFORE | AFTER column_name
 
 index_desc:
    (column_desc_list) [index_type] [index_option_list]
