410安全违规信息修改3

--- a/en-US/2.quickstart/4.oracle-based-application-development/1.python-application-1.md
+++ b/en-US/2.quickstart/4.oracle-based-application-development/1.python-application-1.md
@@ -33,7 +33,7 @@ This topic describes how to connect Python applications to OceanBase Database by
    def ob_test():   
            url = 'jdbc:oceanbase://host:port'
            user = 's**@oracle'
-           password = '**1***'
+           password = '******'
            driver = 'com.alipay.oceanbase.jdbc.Driver'
            jarFile = './oceanbase-client-2.2.3.jar'
            sqlStr = 'select * from test_python'  
