--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/3.basic-sql-operations-of-oracle-mode.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/3.basic-sql-operations-of-oracle-mode.md
@@ -543,7 +543,7 @@ Query OK, 0 rows affected
 obclient> exit;
 Bye
 
-obclient> obclient -h127.0.0.1 -us**@oracle -P2881 -p**1***
+obclient> obclient -h127.0.0.1 -us**@oracle -P2881 -p******
 
 obclient> SELECT * FROM t_insert;
 +----+------+-------+------------+
