--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
@@ -209,7 +209,7 @@ int main(int argc, char *argv[])
   /*设置服务器，用户名和密码*/
   strcpy(strServerName, "172.30.xx.xx:2881");
   strcpy(strUserName, "s**@oracle");
-  strcpy(strPassword, "**1***");
+  strcpy(strPassword, "******");
   /*初始化 OCI 应用环境*/
   OCIInitialize(OCI_DEFAULT, NULL, NULL, NULL, NULL);
   /*初始化环境句柄*/
