--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
@@ -61,7 +61,7 @@ import jaydebeapi
 def ob_test():   
     url = 'jdbc:oceanbase://host:port'
     user = 's**@oracle'
-    password = '**1***'
+    password = '******'
     driver = 'com.alipay.oceanbase.jdbc.Driver'
     jarFile = './oceanbase-client-2.4.0.jar'
 
