410安全违规信息修改4

--- a/en-US/2.quickstart/3.mysql-based-application-development/2.java-application.md
+++ b/en-US/2.quickstart/3.mysql-based-application-development/2.java-application.md
@@ -73,7 +73,7 @@ connection = DriverManager.getConnection("jdbc:mysql://{hostname}:{port}/{dbname
 
 * **password**: specifies the password of the account.
 
-Example: `jdbc:mysql://172.30.xx.xx:2883/test?user=r***&password=***1**`
+Example: `jdbc:mysql://172.30.xx.xx:2883/test?user=r***&password=******`
 
 After you edit the code, you can run the following commands to compile and run the code. If true is returned, you have connected to the database.
 
