--- a/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/1.client-connects-to-oceanbase-database/8.springboot-connection-example.md
+++ b/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/1.client-connects-to-oceanbase-database/8.springboot-connection-example.md
@@ -103,8 +103,8 @@ spring:
   datasource:
       driver-class-name: com.alipay.oceanbase.jdbc.Driver
       url: jdbc:oceanbase://host:port/test?characterEncoding=UTF-8
-      username: **u***
-      password: **p***
+      username: ******
+      password: ******
 #spring.jpa.hibernate.ddl-auto=update
 jackson:
   serialization:
