--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
@@ -115,7 +115,7 @@ OceanBase 数据库提供了以下超时时间相关的变量，可使用 `SHOW 
 * 在 JDBC 连接串中设置。示例如下：
 
    ```html
-   jdbc:oceanbase://10.1.0.0:1001/unittests?user=**u**@sys&password=***1**&sessionVariables = ob_query_timeout = 60000000000,ob_trx_timeout = 60000000000&xxxx
+   jdbc:oceanbase://10.1.0.0:1001/unittests?user=**u**@sys&password=******&sessionVariables = ob_query_timeout = 60000000000,ob_trx_timeout = 60000000000&xxxx
    ```
 
 * 在 SQL 级别添加 Hint 设置。示例如下：
