--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
@@ -336,7 +336,7 @@ use $db_name;
    port='$host_port'               # observer A 的端口号
    tenant='$tenant_name'              # 租户名
    user='$user'               # 用户名
-   password='$password'           # 密码
+   password='******'           # 密码
    data_path='$path'         # 注意！！请填写 observer A 所在服务器下 tbl 所在目录
    db_name='$db_name'             # 数据库名
    # 创建表
@@ -688,7 +688,7 @@ sudo yum install obtpch
 
 ```test
 cd /tmp
-obd test tpch obtest --tenant=test -s 1 --password='' --remote-tbl-dir=/tmp/tpch1 
+obd test tpch obtest --tenant=test -s 1 --password='******' --remote-tbl-dir=/tmp/tpch1 
 ```
 
 执行上述命令后，OBD 开始执行，可以看到执行过程中的每个步骤:
