--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy.md
@@ -156,13 +156,13 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
    cd /opt/taobao/install/obproxy && bin/obproxy -r "xxx.xxx.xxx.1:2881;xxx.xxx.xxx.2:2881;xxx.xxx.xxx.3:2881" -p 2883 -o "observer_sys_password=$sha1_value,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c tenant_name
    ```
 
-  <main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>说明</h4>
     <ul>
     <li><code>$sha1_value</code> 应根据实际设置密码替换。设置 proxy 启动参数方式，设置的密码是 sha1 后的值，而不是原始值。例如：proxyro 用户设置的密码是 <code>123456</code>，则需要设置 <code>observer_sys_password</code> 的值是 <code>7c4a8d09ca3762af61e59520943dc26494f8941b</code>。</li>
     <li>示例 IP 做了脱敏处理，这不是安装需求。在启动时应根据自己机器真实 IP 填写。</li>
     </ul>
-  </main>
+   </main>
 
    参数解释：
 
@@ -210,14 +210,9 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
 
    ```shell
    [admin@xxx /home/admin]
-   $obclient -hxxx.xxx.xxx.1 -P2883 -uroot@sys#test3241 -p
-   Enter password:
+   $obclient -hxxx.xxx.xxx.1 -P2883 -uroot@sys#test3241 -p******
    Welcome to the OceanBase.  Commands end with ; or \g.
-   Your OceanBase connection id is 1
-   Server version: OceanBase 3.2.4.1 (r101000052023010822-346aa35c32e99d1b82d713f75f0072c45bdf7aab) (Built Jan  8 2023 22:52:43)
-
-   Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
-
+   ...
    Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
 
    obclient [(none)]>
@@ -227,12 +222,9 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
 
    ```shell
    [admin@xxx /home/admin]
-   $obclient -hxxx.xxx.xxx.1 -P2883 -utest3241:sys:root -p
-   Enter password:
+   $obclient -hxxx.xxx.xxx.1 -P2883 -utest3241:sys:root -p******
    Welcome to the OceanBase.  Commands end with ; or \g.
-   Your OceanBase connection id is 4
-   Server version: OceanBase 3.2.4.1 (r101000052023010822-346aa35c32e99d1b82d713f75f0072c45bdf7aab) (Built Jan  8 2023 22:52:43)
-
+   ......
    Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
 
    Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
