--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/2.use-ssh-to-log-on-without-password.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks/2.use-ssh-to-log-on-without-password.md
@@ -42,7 +42,7 @@
 #!/usr/bin/bash
    
 SERVERS=("<user>@<server_ip1>" "<user>@<server_ip2>" "<user>@<server_ip3>")
-PASSWORD="<password>"
+PASSWORD="******"
 keygen() {
 sudo yum -y install expect
 expect -c "
