--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
@@ -26,7 +26,7 @@
 联系 OceanBase 数据库部署人员或者管理员获取相应的数据库连接串，例如：
 
 ```sql
-obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
+obclient  -h100.88.xx.xx -usys@oracle -p****** -P2881
 ```
 
 数据库连接串包含了访问数据库所需的参数信息，在创建应用程序前，可通过数据库连接串验证登录数据库，保证连接串参数信息正确。
