--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
@@ -168,7 +168,7 @@ TPC 组织为 TPC-C 定义了严格、详细的测试标准。一般情况下开
    driver=com.alipay.oceanbase.jdbc.Driver
    conn=jdbc:oceanbase://127.0.0.1:2881/tpccdb?useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true&allowMultiQueries=true
    user=root@test
-   password=root
+   password=****
 
    warehouses=10
    loadWorkers=2
