--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/7.connect-to-the-oceanbase-database-through-spring-boot-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/7.connect-to-the-oceanbase-database-through-spring-boot-of-oracle-mode.md
@@ -103,8 +103,8 @@ spring:
   datasource:
       driver-class-name: com.alipay.oceanbase.jdbc.Driver
       url: jdbc:oceanbase://host:port/test?characterEncoding=UTF-8
-      username: **u***
-      password: **p***
+      username: ******
+      password: ******
 #spring.jpa.hibernate.ddl-auto=update
 jackson:
   serialization:
