410 RN add changes

--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/102.V3.1/98.ob-312.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/102.V3.1/98.ob-312.md
@@ -173,7 +173,7 @@
 
 * 支持主备集群解耦。
 
-* Oracle 模式支持 `USERENV('SID')` 和 `userenv('LANGUAGE')`。
+* Oracle 模式支持 `USERENV('SID')`、 `USERENV('LANGUAGE')` 和 `USERENV('INSTANCE')`。
 
 * 优化虚拟表 `__all_virtual_processlist`，增加 `retry_cnt` 和 `retry_ret` 字段显示。
 
@@ -256,3 +256,21 @@
 * 修复数据备份发起时获取 schema version 不准确，导致备份漏备份 PG 或误认为 schema 错误的问题。
 
 * 修复 SQL 在服务器和客户端之间使用不同字符集类型的返回结果报错 `-4013` 的问题。
+
+## V3.1.2 BP9
+
+### 版本信息
+
+* 发布时间：2022 年 7 月 28 日
+* 版本号：V3.1.2 BP9
+
+### 缺陷修复
+
+* 优化虚拟表 `__all_virtual_server_stat` 中 CPU 相关的参数值不精确的问题。
+* 优化 OLAP 业务模型下 Broadcast 和 Nest Loop Join 算子执行效率的问题。
+* 优化 Root Server 模块日志报错 `index status not match` 的问题。
+* 修复服务端与客户端字符集不同的情况下，执行导数操作消耗较多内存资源导致报错 4013 的问题。
+* 修复 `SQL_AUDIT` 视图内有不可识别字符的 SQL 时，无法导出数据的问题。
+* 修复 OBServer 节点 后台线程使用全局索引但初始化异常导致 Crash 的问题。
+* 修复内存使用统计 `min_buf_size` 未包含 `row_extend_size`，导致大量数据查询执行报错 `Buffer not enough` 的问题。
+* 修复存储过程执行时，在数据量较大的情况下 `tmp_block_cache` 占用内存较大导致报错内存不足的问题。
