--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -1,76 +1,78 @@
 # OceanBase 数据库企业版 V3.2.4
 
-## 版本信息
+## V3.2.4
 
-- 发布时间：2022 年 11 月 1 日
-- 版本号：V3.2.4
+### 版本信息
 
-## 版本定位
+* 发布时间：2022 年 11 月 1 日
+* 版本号：V3.2.4
+
+### 版本定位
 
 本次发布的版本（V3.2.4），在 V3.2.3 稳定版本的基础上，根据客户系统生产和测试需求，继续在内核功能兼容性和稳定性方面进行迭代增强，核心能力提升如下：
 
-- **MySQL兼容性增强**
+* **MySQL兼容性增强**
 
     支持地理信息系统（GIS），兼容 MySQL Binlog 解析，新增系统包 DBMS_RESOURCE_MANAGER。
 
-- **Oracle兼容性增强**
+* **Oracle兼容性增强**
 
     新增系统包 DBMS_SCHEDULER，系统包函数补充完善
 
-- **内核增强**
+* **内核增强**
 
     支持基于 SQL 规则的资源隔离，支持 IPv6 协议，支持备份到 OBS，日志优化，支持配置事务大小，支持配置登录线程数量。
 
-## 特性更新
+### 特性更新
 
-### 兼容性增强
+#### 兼容性增强
 
-#### MySQL 兼容
+##### MySQL 兼容
 
-- 支持地理信息系统（GIS）
+* 支持地理信息系统（GIS）
 
     空间信息系统（GIS） 提供了对空间对象(点、线、面以及复杂的空间对象)的存储、计算、索引能力，在交通出行行业有着广泛的应用，可以帮助用户快速构建空间计算能力。OceanBase V3.2.4 版本开始支持 GIS，OceanBase 的 GIS 设计选择了基于四叉树空间划分的索引方案，支持兼容MySQL 8.0的 GIS 数据类型，支持 SRS（空间参考坐标系）元数据的管理及缓存，支持基于 QuadTree 的空间索引 ，支持单值类型（GEOMETRY/POINT/LINESTRING/POLYGON）和多值类型 (MULTIPOINT/MULTILINESTRING/MULTIPOLYGON/GEOMETRYCOLLECTION) ，并实现MySQL 8.0 常用的空间计算函数。更多信息，请参见 [空间计算函数](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000948011)。
 
-- 兼容 MySQL Binlog 解析
+* 兼容 MySQL Binlog 解析
 
     OB-CDC 数据同步解决方案支持兼容 MySQL Binlog 能力，支持主流应用（CANAL，DEBEZIUM，FLINK-CDC）从 OceanBase 进行 Binlog 生成和解析。对于 OBServer 节点需要兼容支持 Binlog 相关系统变量，例如 binlog_format，binlog_row_image，log_bin 和 server_uuid 等，同时新增支持对 REPLICATION SLAVE 和 REPLICATION CLIENT 权限设置。OB-CDC 将 OceanBase 的 CLOG 日志解析生成为 Binlog 兼容日志供下游产品订阅消费。更多信息，请参见 [binlog_row_image](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000946273)。
 
-- 新增系统包 DBMS_RESOURCE_MANAGER
+* 新增系统包 DBMS_RESOURCE_MANAGER
 
     扩展支持系统包 DBMS_RESOURCE_MANAGER，用于创建和维护资源使用组、资源管理计划，资源组绑定规则等，支持 CREATE_CONSUMER_GROUP、CREATE_PLAN、SET_CONSUMER_GROUP_MAPPING 等函数。更多信息，请参见[DBMS_RESOURCE_MANAGER 概述](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000946017)。
 
-#### Oracle 兼容
+##### Oracle 兼容
 
-- 新增系统包 DBMS_SCHEDULER
+* 新增系统包 DBMS_SCHEDULER
 
     新增支持系统包 DBMS_SCHEDULER 用于管理定时任务，支持CREATE_JOB、CREATE_PROGRAM、DEFINE_PROGRAM_ARGUMENT 等函数。更多信息，请参见[DBMS_SCHEDULER 概述](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945869)。
 
-- 系统包函数补充完善
+* 系统包函数补充完善
 
-  - 支持系统包函数 DBMS_SESSION.SET_CONTEXT，设置或重置上下文属性的值。
-  - 支持系统包函数 DBMS_SESSION.CLEAR_CONTEXT，清除指定的上下文信息。
-  - 支持系统包函数 UTL_RAW.CAST_TO_BINARY_INTEGER，将以 RAW 二进制形式表示的 BINARY_INTEGER 值转换为 BINARY_INTEGER。
+  * 支持系统包函数 DBMS_SESSION.SET_CONTEXT，设置或重置上下文属性的值。
+  * 支持系统包函数 DBMS_SESSION.CLEAR_CONTEXT，清除指定的上下文信息。
+  * 支持系统包函数 UTL_RAW.CAST_TO_BINARY_INTEGER，将以 RAW 二进制形式表示的 BINARY_INTEGER 值转换为 BINARY_INTEGER。
 
-### 内核增强
+#### 内核增强
 
-- 支持基于SQL规则的资源隔离
+* 支持基于SQL规则的资源隔离
 
     在实际项目交付中我们发现，客户业务希望能够对资源隔离进行更细微的控制，比如某个用户执行不同 SQL 使用不同的资源规格进行隔离，通过这种细粒度的应用方式帮助业务分配和隔离资源（通常为 OLAP 和 OLTP 业务的资源），减少业务之间的互相影响。
 
-    OceanBase V3.2.4 版本支持创建资源组，支持绑定用户与资源组，后续用户在执行的业务 SQL 时，OceanBase 根据预定义的 SQL 规则匹配相应的资源组，帮助用户自定义业务资源隔离方案策略，当前该资源隔离方案仅支持对 CPU 资源隔离。更多信息，[租户间的资源隔离](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000944803)。
+    OceanBase V3.2.4 版本支持创建资源组，支持绑定用户与资源组，后续用户在执行的业务 SQL 时，OceanBase 根据预定义的 SQL 规则匹配相应的资源组，帮助用户自定义业务资源隔离方案策略，当前该资源隔离方案仅支持对 CPU 资源隔离。更多信息请参见 [租户间的资源隔离](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000944803)。
 
-- 支持 IPv6 协议
+* 支持 IPv6 协议
 
-    随着更多的通信网络和终端设备厂商支持 IPv6 通信协议，IPv6 在客户项目上的应用日益广泛。OceanBase V3.2.4 版本及相关产品组件（obproxy、JDBC 等）均已支持 IPv6 协议。OceanBase 集群可以同时支持 IPv4 和 IPv6 网络接口的 TCP/IP 连接，在使用 IPv6 协议前请确保服务器操作系统必须被配置支持 IPv6。更多信息，请参见[IS_IPV6](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000947754)。
+    随着更多的通信网络和终端设备厂商支持 IPv6 通信协议，IPv6 在客户项目上的应用日益广泛。OceanBase V3.2.4 版本及相关产品组件（obproxy、JDBC 等）均已支持 IPv6 协议。OceanBase 集群可以同时支持 IPv4 和 IPv6 网络接口的 TCP/IP 连接，在使用 IPv6 协议前请确保服务器操作系统必须被配置支持 IPv6。更多信息，请参见 [IS_IPV6](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000947754)。
 
-- 支持备份到 OBS
+* 支持备份到 OBS
 
-    备份恢复是 OceanBase 数据库高可用特性的核心组件， OceanBase 数据库已经支持 NFS、阿里云OSS 和 腾讯云 COS 三种备份介质。在OceanBase V3.2.4 版本中新增支持备份到华为云 OBS（对象存储服务器），通过配置备份目的端（backup_dest）将数据和日志文件备份存储到 OBS 上。  更多信息，请参见[备份前准备](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945704)。
+    备份恢复是 OceanBase 数据库高可用特性的核心组件， OceanBase 数据库已经支持 NFS、阿里云 OSS 和 腾讯云 COS 三种备份介质。在OceanBase V3.2.4 版本中新增支持备份到华为云 OBS（对象存储服务器），通过配置备份目的端（backup_dest）将数据和日志文件备份存储到 OBS 上。  更多信息，请参见 [备份前准备](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945704)。
 
-- 日志优化
+* 日志优化
 OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整， 主要包括：
 
-  - 日志级别定义：增加 DIAG 诊断日志级别，将无需用户感知的 WARN, ERROR 归到 DIAG 日志。对需要保留面向运维的预警/报错日志，进行日志级别分类调整，如下：
+  * 日志级别定义：增加 DIAG 诊断日志级别，将无需用户感知的 WARN, ERROR 归到 DIAG 日志。对需要保留面向运维的预警/报错日志，进行日志级别分类调整，如下：
 
     | 日志级别 | 面向对象 | 定义 | 原日志级别 |
     | ------ | ------ | ------ | ------ |
@@ -82,23 +84,23 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
     | TRACE | 研发 | 任务级调试信息 | TRACE |
     | DEBUG | 研发 | 详细调试信息 | DEBUG |
 
-  - 错误码关联：分类错误消息并完善对应的错误码。为用户的每一条告警、错误定义响应的错误码，用户可根据错误码检索文档寻找解决方法。
+  * 错误码关联：分类错误消息并完善对应的错误码。为用户的每一条告警、错误定义响应的错误码，用户可根据错误码检索文档寻找解决方法。
 
-  - 按错误码限流：针对 WDIAG 级别日志按错误码进行限流，被限流日志仅输出错误码及限流日志数。增加 `diag_syslog_per_error_limit` 配置项用于控制此限流功能，默认单个错误 200 条 DIAG 日志每秒。
+  * 按错误码限流：针对 WDIAG 级别日志按错误码进行限流，被限流日志仅输出错误码及限流日志数。增加 `diag_syslog_per_error_limit` 配置项用于控制此限流功能，默认单个错误 200 条 DIAG 日志每秒。
 
-  - 监控日志移除：日志中定时打印的 `dump tenant info`, `memory info`, `easy stat` 等移出日志文件单独管理。
+  * 监控日志移除：日志中定时打印的 `dump tenant info`, `memory info`, `easy stat` 等移出日志文件单独管理。
 
-  - 日志文件自描述：在日志文件头部增加记录机器地址、机型信息 CPU 类型、OS 版本、OBServer 节点版本和 TimeZone 信息等。
+  * 日志文件自描述：在日志文件头部增加记录机器地址、机型信息 CPU 类型、OS 版本、OBServer 节点版本和 TimeZone 信息等。
 
-- 其它功能增强
+* 其它功能增强
 
-  - 支持配置事务大小，参见配置项 `_max_trx_size`。
-  - 支持配置登录线程数量，参见配置项 `sql_login_thread_count`。
-  - 支持表级并行 Hint 设置，例如 `select /*+ parallel(t1, 8) */ from t1；`。
+  * 支持配置事务大小，参见配置项 `_max_trx_size`。
+  * 支持配置登录线程数量，参见配置项 `sql_login_thread_count`。
+  * 支持表级并行 Hint 设置，例如 `select /*+ parallel(t1, 8) */ from t1；`。
 
-## 兼容性变更
+### 兼容性变更
 
-### 配置项
+#### 配置项
 
 | 配置项 | 修改类型 | 默认值 | 新默认值 | 描述 |
 | ------ | ------ | ------ | ------ | ------ |
@@ -109,7 +111,7 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
 | ob_esi_syslog_level | 修改 | INFO | WDIAG | 存储独立子进程日志级别 |
 | syslog_level | 修改 | INFO | WDIAG | 系统日志级别 |
 
-### 系统变更
+#### 系统变更
 
 | 配置项 | 修改类型 | 建议值 | 描述 |
 | --- | --- | --- | --- |
@@ -119,21 +121,21 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
 | log_bin | 新增 | ON | 兼容 binlog 的启用状态 |
 | server_uuid | 新增 | 租户创建后生成 | 兼容实例 uuid |
 
-### 行为变更
+#### 行为变更
 
-- OceanBase V3.2.4 版本启用新的系统日志级别，与早期版本系统日志差异如下：
-  - 日志优先级从高到低依次是 "ERROR", "WARN", "INFO", "EDIAG", "WDIAG", "TRACE", "DEBUG"。
+* OceanBase V3.2.4 版本启用新的系统日志级别，与早期版本系统日志差异如下：
+  * 日志优先级从高到低依次是 "ERROR", "WARN", "INFO", "EDIAG", "WDIAG", "TRACE", "DEBUG"。
 
-  - 早期版本 WARN 级别的日志升级到 V3.2.4 版本后变更为 WDIAG 级别。因此对应早期版本 WARN 级别日志，升级到 V3.2.4 版本后转换为 ERROR 级别日志输出。
+  * 早期版本 WARN 级别的日志升级到 V3.2.4 版本后变更为 WDIAG 级别。因此对应早期版本 WARN 级别日志，升级到 V3.2.4 版本后转换为 ERROR 级别日志输出。
 
-## 升级路径
+### 升级路径
 
-- 支持从 V3.2.1、V3.2.2 、V3.2.3 升级到 V3.2.4，但 V3.2.3 BP6 及后续版本不支持升级到 V3.2.4。
+* 支持从 V3.2.1、V3.2.2 、V3.2.3 升级到 V3.2.4，但 V3.2.3 BP6 及后续版本不支持升级到 V3.2.4。
 
-- 支持从 V3.1.2 升级到 V3.2.4, 需要手工下载并上传 V3.2.0、V3.2.1 、V3.2.2 和 V3.2.3 的软件包到 OCP。
-- 支持从 V2.2.77 升级，需要先升级到 V3.1.2，然后再升级到 V3.2.4。
+* 支持从 V3.1.2 升级到 V3.2.4, 需要手工下载并上传 V3.2.0、V3.2.1 、V3.2.2 和 V3.2.3 的软件包到 OCP。
+* 支持从 V2.2.77 升级，需要先升级到 V3.1.2，然后再升级到 V3.2.4。
 
-## 周边配套
+### 周边配套
 
 OceanBase 数据库 V3.2.4 推荐使用的平台工具版本如下。
 
@@ -148,6 +150,53 @@ OceanBase 数据库 V3.2.4 推荐使用的平台工具版本如下。
 | objdbc | V2.2.11 |
 | OBClient | V2.1.1.3 |
 
+### 注意事项
+
+配置项 `open_cursors` 的默认值为 50，表示单个 SESSION 上最大可以打开的 Cursor 数量。V3.2.4 版本优化限制了单个 SESSION 上最大可以打开的 Prepare Statement 数量，因此在业务选择升级到 V3.2.4 版本时需要评估是否将配置项 `open_cursors` 调大，避免业务 SQL 执行 Prepare Statement 报错。
+
+## V3.2.4 BP1
+
+### 版本信息
+
+* 发布时间：2023 年 1 月 9 日
+* 版本号：V3.2.4 BP1
+
+### 功能增强
+
+* 安全优化
+
+  * 备份恢复操作支持动态设置 AK/SK。OceanBase 数据库备份功能支持将对象存储（OSS/COS/OBS）作为备份目的端， 但不具备在备份过程中修改备份目的端的`access_id` 和 `access_key` 的能力，当用户的 AK/SK 发生变更时，需要通过中断日志备份和变更备份目录的方式进行运维。 因此，OceanBase 数据库新增命令 `ALTER SYSTEM change external_storage_dest PATH[=]'xxx?host=xxx'  set  ACCESS_INFO[=]'access_id=xxx&access_key=xxx';` 用以修改备份目的端的 AK/SK，同时也会对 GCONF 中相关内容进行更新和保存。在使用该功能时，需要注意：
+
+    * 建议先停止二次备份任务，再更新设置对象存储的 AK/SK，同时建议一个小时后再删除旧的 AK/SK。  
+    * 如果在二次备份任务执行过程中修改了AK/SK，若检查到任务卡住，则需要强制取消备份任务，变更目录继续进行二次备份任务。
+
+  * DBLINK 配置的密码信息支持加密存储。
+  * OBServer 节点间通信支持 RPC 认证。
+  * 透明加密 (TDE) 能力适配接入阿里云 KMS。
+
+* 监控统计优化，`v$sysstat` 视图新增支持事务耗时统计和 SQL 执行耗时统计。
+
+  * 事务耗时统计包括 `sp trans total used time` 和 `distributed trans total used time` 指标项。
+  * SQL 执行耗时统计包括 `sql local execute time`、`sql remote execute time` 和 `sql distributed execute time` 指标项。
+* MySQL PL 语法兼容，支持 `GET DIAGNOSTICS` 和 `GET STACKED DIAGNOSTICS CONDITION`，支持 `DECLARE CONTINUE HANDLER`，支持 `SIGNAL SQLSTATE`，同时兼容 DEFINER 语法不报错。
+* 性能优化，针对 `insert values/update/delete` 简易 SQL 场景进行优化，使用 Arraybing 批量执行性能提升约 4 倍。
+
+### 兼容性变更
+
+* 修改配置项 `schema_history_expire_time` 的默认值从 7d 变为 30d。
+* 修改配置项 `ob_esi_session_timeout` 的默认值从 1m 变为 10m。
+* 新增配置项 `rpc_client_authentication_method`，用于设置 RPC 客户端的安全认证方式，动态生效，取值范围为 `NONE，PLAIN_KEY，SSL_NO_ENCRYPT，SSL_IO`。默认为 NONE。
+* 新增配置项 `rpc_server_authentication_method`，用于设置 RPC 服务端的安全认证方式，动态生效，取值范围为 `NONE，ALL，PLAIN_KEY，SSL_NO_ENCRYPT，SSL_IO`。默认为 ALL。
+
+### 缺陷修复
+
+* 修复 Oracle 模式下，Package 中使用 Cursor 进行循环操作报错 4179 的问题。
+* 修复 Delete 带有外键的表数据时，内部执行流程在处理外键时触发异常并行，导致报错 Timeout 的问题。
+* 修复租户释放后，因资源释放异常导致后续创建租户报错资源不足的问题。
+* 修复在计划命中 Plan cache 的情况，Merge into 执行结果错误的问题。
+* 修复在 JSON 生成列上创建索引的场景中存在内存泄漏的问题。
+
 ## 注意事项
 
-配置项 `open_cursors` 的默认值为 50，表示单个 SESSION 上最大可以打开的 cursor 数量。V3.2.4 版本优化限制了单个 SESSION 上最大可以打开的 Prepare Statement 数量，因此在业务选择升级到 V3.2.4 版本时需要评估是否将配置项 `open_cursors` 调大，避免业务 SQL 执行 Prepare Statement 报错。
+* 如需使用 KMS 存储加密功能，请先将 liboblog 升级到 3.2.4.0 及以上版本，然后再升级 OBServer 版本到 3.2.4 BP1。
+* 如果在 Arraybinding 和 `create table as select` 场景遇到大查询死锁的问题，建议调大配置项参数 `large_query_threshold` 来避免触发死锁。
