--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
@@ -577,10 +577,10 @@ MySQL 模式的 SQL_MODE 如下默认行为变更:
 
 ### 功能增强
 
-* 备份恢复操作支持动态设置 AK/SK。OceanBase 数据库备份功能支持将对象存储（OSS/COS/OBS）作为备份目的端， 但不具备在备份过程中修改备份目的端的`access_id` 和 `access_key` 的能力，当用户的 AK/SK 发生变更时，需要通过中断日志备份和变更备份目录的方式进行运维。 因此，OceanBase 数据库新增命令 `ALTER SYSTEM change external_storage_dest PATH[=]'xxx?host=xxx' set ACCESS_INFO[=]'access_id=xxx&access_key=xxx';` 用以修改备份目的端的 AK/SK，同时也会对 GCONF 中相关内容进行更新和保存。在使用该功能时，需要注意：
+* 备份恢复操作支持动态设置 AK/SK。OceanBase 数据库备份功能支持将对象存储（OSS/COS/OBS）作为备份目的端， 但不具备在备份过程中修改备份目的端的 `access_id` 和 `access_key` 的能力，当用户的 AK/SK 发生变更时，需要通过中断日志备份和变更备份目录的方式进行运维。 因此，OceanBase 数据库新增命令 `ALTER SYSTEM change external_storage_dest PATH[=]'xxx?host=xxx' set ACCESS_INFO[=]'access_id=xxx&access_key=xxx';` 用以修改备份目的端的 AK/SK，同时也会对 GCONF 中相关内容进行更新和保存。在使用该功能时，需要注意：
 
   * 建议先停止二次备份任务，再更新设置对象存储的 AK/SK，同时建议一个小时后再删除旧的 AK/SK。  
-  * 如果在二次备份任务执行过程中修改了AK/SK，若检查到任务卡住，则需要强制取消备份任务，变更目录继续进行二次备份任务。
+  * 如果在二次备份任务执行过程中修改了 AK/SK，若检查到任务卡住，则需要强制取消备份任务，变更目录继续进行二次备份任务。
 
 * 优化热点行观测，在 `v$sysstat` 视图中新增 3 个字段如下：
   * `TRANS_ELR_ENABLE_COUNT`：允许开启提前解行锁的事务数量。
@@ -633,7 +633,7 @@ MySQL 模式下，禁止多表更新使用 order by 或 limit 算子， 与 MySQ
 
 * 修复 IN 表达式在分区表下计算结果集错误的问题。
 * 修复空 UNIT 在迁移过程中卡主的问题。
-* 修复在计划命中 Plan cache 的情况，Merge into 执行结果错误的问题。
+* 修复在计划命中 Plan Cache 的情况，Merge into 执行结果错误的问题。
 * 修复在 JSON 生成列上创建索引的场景中存在内存泄漏的问题。
 * 修复备份数据自动清理 `backup_set` 失败的问题。
 * 修复 Oracle 模式下，Package 中使用 Cursor 进行循环操作报错 4179的问题。
