410安全违规信息修改5

--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
@@ -326,7 +326,7 @@ int main(int argc, char *argv[])
 ```c
 strcpy(strServerName, "172.30.xx.xx:2881");
 strcpy(strUserName, "s**@oracle");
-strcpy(strPassword, "***1**");
+strcpy(strPassword, "******");
 ```
 
 * **strServerName**：取自 `-h` 和 `-P` 参数，`IP:port`。OceanBase 数据库连接 IP，通常是一个 ODP 地址，以及访问所用的端口号。
