--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/11.connect-to-the-oceanbase-database-through-hibernate-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/11.connect-to-the-oceanbase-database-through-hibernate-of-oracle-mode.md
@@ -32,7 +32,7 @@
         <property name="connection.driver_class">com.alipay.oceanbase.jdbc.Driver</property>
         <property name="connection.url">jdbc:oceanbase://10.100.xxx.xxx:18815/test</property>
         <property name="connection.username">admin</property>
-        <property name="connection.password">admin</property>
+        <property name="connection.password">******</property>
 
         <!-- 可选配置 -->
         <!--是否支持方言，以下MySQLMode和OracleMode视数据库模式情况配置-->
