--- a/zh-CN/5.data-migration/4.migrate-data-from-oracle-database-to-oceanbase-database/2.use-datax-to-migrate-data-from-oracle-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/4.migrate-data-from-oracle-database-to-oceanbase-database/2.use-datax-to-migrate-data-from-oracle-database-to-oceanbase-database.md
@@ -182,7 +182,7 @@ myjob.json 配置文件如下：
                     "name":"oraclereader",
                     "parameter":{
                         "username": "user_name",
-                        "password":"user_password",
+                        "password":"******",
                         "column":["*"],
                         "connection": [
                             {
@@ -199,7 +199,7 @@ myjob.json 配置文件如下：
                         "batchSize":5000,
                         "memstoreThreshold":"90",
                         "username":"user@tenet#cluster",
-                        "password":"ob_user_password",
+                        "password":"******",
                         "column":["*"],
                         "connection": [
                             {
