--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -262,7 +262,7 @@ obclient [(none)]>
 +-------------------------------------+-------+-----------+--------+
 | url                                 | user  | password  | status |
 +-------------------------------------+-------+-----------+--------+
-| http://192.168.1.1:3000/d/oceanbase | admin | oceanbase | active |
+| http://192.168.1.1:3000/d/oceanbase | admin | ****** | active |
 +-------------------------------------+-------+-----------+--------+
  ```
 
