--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
@@ -49,7 +49,7 @@ ERROR 1045 (42000): Access denied for user 'ny1'@'xxx.xxx.xxx.xxx' (using passwo
 
    ```sql
    [admin@k08j13249.eu95sqa /home/admin]
-   $obclient -h10.10.10.1 -P2881 -uny1@MySQL -p**8*** -A
+   $obclient -h10.10.10.1 -P2881 -uny1@MySQL -p****** -A
    Welcome to the OceanBase monitor.  Commands end with ; or \g.
    Your OceanBase connection id is 3221490183
    Server version: 5.7.25 OceanBase 4.0.0.0 (r100000152022092610-404b3d7117dd0035698010c6e3b07948abc0e433) (Built Sep 26 2022 10:34:25)
