--- a/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
+++ b/zh-CN/1.learn-more-about-oceanbase/7.constraints-on-product-specifications.md
@@ -96,5 +96,5 @@
 | 主租户和备租户异构              | 不支持主租户与备租户使用不同的 `UNIT_NUM` 配置   |
 | 主备租户配置项修改是否同步       | 主租户所在集群修改配置项后不会影响备租户所在集群的配置项  |
 | 主备租户系统变量修改是否同步     | 主租户修改系统变量后，备租户的系统变量会同步修改       |
-| Switchober 限制                | <ul><li>主切备要求所有 Server 在线</li> <li>备切主要求所有 Server 在线</li></ul>|
+| Switchover 限制                | 备切主要求所有 Server 在线     |
 | Failover 限制                  | 要求所有 Server 在线                                    |
