update example for create user using password &DBMS_JOB.SUBMIT

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md
@@ -13,14 +13,12 @@
 
 ```sql
 create_user_stmt:
-    CREATE USER user_name [host_name]  IDENTIFIED BY password 
+    CREATE USER user_name [host_name]  IDENTIFIED BY [ VALUES ] password_str 
          [REQUIRE {NONE | SSL | X509 | tls_option_list}]
          [PROFILE user_profile]
          [DEFAULT TABLESPACE table_space] 
          [PRIMARY_ZONE 'zone_name']
 
-password:
-    STR_VALUE
     
 tls_option_list:
       tls_option
@@ -38,22 +36,29 @@ tls_option:
 |--------------------------------|--------------------------------------------------------------|
 | user_name                      | 用户名，新建用户后，"`dba_users`"表会新增一行该用户的表项。如果同名用户已经存在，则报错。          |
 | host_name                      | 用户所在的主机名，为 `@xxx.xxx.xx.x` 格式。                               |
-| IDENTIFIED BY                  | 必须使用 `IDENTIFIED BY` 子句，为用户指定一个密码。如果密码包含特殊字符(~!@#%^&*_-+=`|(){}[]:;',.?/)，则需要使用双引号包含。                                   |
-| REQUIRE                        | 指定用户使用的加密协议为 `NONE` 、`SSL` 、`X509` 和 `tls_option_list` 中的一种。 |
+| IDENTIFIED BY                  | 必须使用 `IDENTIFIED BY` 子句，为用户指定一个密码。`IDENTIFIED BY VALUES password_str` 用于指定密码为密文。如果密码包含特殊字符(~!@#%^&*_-+=`|(){}[]:;',.?/)，则需要使用双引号包含。  |
+| REQUIRE                        | 指定用户使用的加密协议为 `NONE`、`SSL`、`X509` 和 `tls_option_list` 中的一种。 |
 | PROFILE user_profile           | 指定用户使用的 Profile。                                             |
 | DEFAULT TABLESPACE table_space | 指定用户的默认表空间。                                                  |
 | PRIMARY_ZONE                   | 指定用户的 Primary Zone。                                          |
 
 ## 示例
 
-1. 执行以下命令创建名为 `user1` 的用户，密码为 \*\*1\*\*\*。
+1. 执行以下命令创建名为 `user1` 的用户并指定明文密码。
 
    ```sql
-   obclient> CREATE USER user1 IDENTIFIED BY **1***;
+   obclient> CREATE USER user1 IDENTIFIED BY ******;
    Query OK, 0 rows affected
    ```
 
-2. 执行以下命令查看创建的用户。
+2. 执行以下命令创建名为 `user2` 的用户并指定密文密码。 
+
+   ```shell  
+   obclient> CREATE USER user2 IDENTIFIED BY VALUES "**********************************";
+   Query
+   ```
+
+3. 执行以下命令查看创建的用户。
 
    ```sql
    obclient> SELECT username FROM dba_users;
@@ -64,8 +69,8 @@ tls_option:
    | LBACSYS    |
    | ORAAUDITOR |
    | PUBLIC     |
-   | YH0917     |
-   | USER1      |
+   | USER1     |
+   | USER2      |
    +------------+
    6 rows in set
    ```
