--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/88.dbms-job-oracle/9.submit-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/88.dbms-job-oracle/9.submit-oracle.md
@@ -1,6 +1,6 @@
 SUBMIT 
 ===========================
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/SUBMIT
+
 `SUBMIT` 存储过程用于提交一个新作业（Job）。
 
   <main id="notice" >
@@ -29,15 +29,15 @@ force           IN  BOOLEAN DEFAULT FALSE);
 
 
 
-|    参数     |                                                                                                                                                        解释                                                                                                                                                        |
-|-----------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| job       | 返回新创建 Job 的 ID。 要查找此 ID，请查询 `USER_JOBS` 或 `DBA_JOBS` 视图的 `JOB` 列。                                                                                                                                                                                                                                |
-| what      | 作业中要运行的 PL 文本，必须是有效的 PL 语句或代码块。 在 `what` 参数中提交的 SQL 包含在以下 PL 块中： ```sql DECLARE job BINARY_INTEGER := :job; next_date DATE := :mydate; broken BOOLEAN := FALSE; BEGIN WHAT :mydate := next_date; IF broken THEN :b := 1; ELSE :b := 0; END IF; END; ```  |
-| next_date | Job 运行的下一个日期。                                                                                                                                                                                                                                                                                                    |
-| interval  | 计算下一次运行 Job 的日期函数。默认值为 `NULL`。必须为未来时间点或 `NULL`。                                                                                                                                                                                                                                                                 |
+|    参数     |                解释                                     |
+|-----------|-----------------------------------------------------------------------------------------------------------------------|
+| job       | 返回新创建 Job 的 ID。 要查找此 ID，请查询 `USER_JOBS` 或 `DBA_JOBS` 视图的 `JOB` 列。 |
+| what      | 作业中要运行的 PL 文本，必须是有效的 PL 语句或代码块。 在 `what` 参数中提交的 SQL 包含在以下 PL 块中： `DECLARE job BINARY_INTEGER := :job; next_date DATE := :mydate; broken BOOLEAN := FALSE; BEGIN WHAT :mydate := next_date; IF broken THEN :b := 1; ELSE :b := 0; END IF; END;`  |
+| next_date | Job 运行的下一个日期。         |
+| interval  | 计算下一次运行 Job 的日期函数。默认值为 `NULL`。必须为未来时间点或 `NULL`。   |
 | no_parse  | 默认值为 `FALSE`。 如果将其设置为 `FALSE`，则会解析与 Job 关联的存储过程。 如果将其设置为 `TRUE`，则会在第一次运行 Job 时解析与 Job 关联的存储过程。 例如，如果想在创建与 Job 关联的表之前提交 Job ，则将其设置为 `TRUE`。                                                                                                                       |
-| zone      | 提交 Job 时，用户可以指定哪个 Zone 可以运行该 Job。                                                                                                                                                                                                                                                                                |
-| force     | 如果为 `TRUE`，则强制运行 Job，否则仅在 Job 未处于运行状态下才运行当前 Job。                                                                                                                                                                                                                                                                 |
+| zone      | 提交 Job 时，用户可以指定哪个 Zone 可以运行该 Job。        |
+| force     | 如果为 `TRUE`，则强制运行 Job，否则仅在 Job 未处于运行状态下才运行当前 Job。      |
 
 
 
@@ -50,7 +50,17 @@ force           IN  BOOLEAN DEFAULT FALSE);
 
 * 为 Job 队列添加了关联参数 `zone` 和 `force`，使用户能够指定 Zone 是否可以运行提交的 Job。
 
-  
 
+## 示例
 
+```shell
+ALTER SESSION SET NLS_DATE_FORMAT='YYYY-MM-DD HH24:MI:SS';
+ALTER SESSION SET nls_timestamp_format ='YYYY-MM-DD HH24:MI:SS.FF';
+DECLARE
+   job01 BINARY_INTEGER;
+BEGIN
+   DBMS_JOB.SUBMIT(job01 ,'dbms_stats.gather_database_stats_job_proc();', sysdate,'sysdate+1');
+   COMMIT;
+END;/
+```
 
