--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
@@ -37,7 +37,23 @@
 
 ### timestamp 与 scn 选取约束
 
-`timestamp` 与 `scn` 需满足区间 \[数据备份最小恢复位点(`MIN_RESTORE_SCN`)，日志归档最大归档位点(`CHECKPOINT_SCN`)\]。
+`timestamp` 与 `scn` 需要大于等于数据备份视图 `CDB_OB_BACKUP_SET_FILES` 中记录的数据备份的最小恢复位点 `MIN_RESTORE_SCN`，小于等于日志归档视图 `CDB_OB_ARCHIVE_LOG` 中的贵大归档位点 `CHECKPOINT_SCN`。由于日志归档可能出现断流，因此恢复位点的选择还需要考虑日志归档的不连续区间，对于可恢复区间的选择则可能是分段的。
+
+物理恢复的可恢复区间如下图所示。
+
+![可恢复区间](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/backup-and-restore/%E5%8F%AF%E6%81%A2%E5%A4%8D%E5%8C%BA%E9%97%B4.png)
+
+图中，用户一共发起了 3 次日志归档，且 round_id 分别为 1、2、3，和 5 次数据备份。其中：
+
+* `log_archive_piece:1` 以及 `backup_full_set=1` 和 `backup_inc_set=2` 的数据已经被清理。
+
+* 有效数据备份为 `backup_full_set=3`、`backup_full_set=4` 和 `backup_inc_set=5`。
+
+* 有效日志归档为 `log_archive_piece:2` 和 `log_archive_piece:3`。
+
+根据当前保留的有效数据备份以及日志的所有可恢复区间，同时由于日志归档可能发生中断，故需要排除中间不连续的时间段，得到分段的可恢复区间，即图中两段绿色线段的时间范围：
+
+\[`backup_full_set=3` 的 `MIN_RESTORE_SCN`,`log_archive_piece:2` 的 `CHECKPOINT_SCN`\] 和 \[`backup_full_set=4` 的 `MIN_RESTORE_SCN`, `log_archive_piece:3` 的 `CHECKPOINT_SCN`\]
 
 ## 恢复性能相关
 
